actualizando clase7 index

--- a/clase7/index.html
+++ b/clase7/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CV/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Curriculum Vitae</title>
 </head>
 <body>
     <header>
-        <img id="foto-presentacion" src="/CV/img/luzAcosta.png" alt="Foto Luz Mayeli Acosta">
+        <img id="foto-presentacion" src="/img/luzAcosta.png" alt="Foto Luz Mayeli Acosta">
         <div>
             <h1>Curriculum Vitae Luz Mayeli Acosta</h1>
         </div>
@@ -92,7 +92,7 @@
 </body>
 <footer>
     <p class="texto-pie">Luz Mayeli Acosta Segura</p>
-    <a href=""><img class="social" src="/CV/img/instagram-brands.svg" alt="instagram"></a>
-    <a href=""><img class="social" src="/CV/img/linkedin-brands.svg" alt="linkedin"></a>
+    <a href=""><img class="social" src="/img/instagram-brands.svg" alt="instagram"></a>
+    <a href=""><img class="social" src="/img/linkedin-brands.svg" alt="linkedin"></a>
 </footer>
 </html>
